index.html change

--- a/index.html
+++ b/index.html
@@ -27,7 +27,7 @@
 						<a href="#">NEWS &amp; MEDIA</a>
 					</li>
 					<li>
-						<a href="#">ABOUT COMVERSE</a>
+						<a href="##">ABOUT COMVERSE</a>
 					</li>
 				</ul>
 			</nav>
