--- a/index.html
+++ b/index.html
@@ -55,7 +55,10 @@
 			<div id="welcome-text">
 				<h1><strong>Free</strong> Your Markets From <br> IT <strong>Complexity</strong></h1>
 	       		 <h3>Comverse Policy Studio <br> <strong>1st</strong> Ever Marketing-Oriented Policy Tool</h3> 
-	       		 <a href="#" class="learn-more-btn">LEARN MORE</a>
+	       		 <a href="#" class="learn-more-btn">
+	       		 	LEARN MORE
+	       		 	<img id="button-arrow" src="img/btnArrow.png" alt="Arrow">
+	       		 </a>
 	       	
 			
 
@@ -113,17 +116,14 @@
 			            </a>
 			            </li>
 			    </ul> 
-			    
-
 		</section>
 	</div>
 	
-
 	<!-- #################################- SECTION SOLUTION -################################# -->
 	<div class="section-solutions">
 		<section class="section-container">
 
-			<h2>WHAT CAN WE DO FOR YOU? </h2>
+			<h1 id="solutions-title">WHAT CAN WE DO FOR YOU? </h1>
 
 		</section>
 
