--- a/index.html
+++ b/index.html
@@ -125,6 +125,80 @@
 
 			<h1 id="solutions-title">WHAT CAN WE DO FOR YOU? </h1>
 
+			<ul class="solutions-list">
+	            <li>
+		            <a href="#">
+		                <figure>
+			                <div class="data-monetization">
+			                	<img src="img/data-monetization.png" alt="Data Monetization">
+			                </div>
+		                	<figcaption>Data monetization</figcaption>
+		                </figure>
+		            </a>
+	            </li>
+
+	            <li>
+		            <a href="#">
+		                <figure>
+			                <div class="machine-to-machine">
+			                	<img src="img/robot-icon.png" alt="Robot icon">
+			                </div>
+			                <figcaption>Machine to machine (MTM)</figcaption>
+		                </figure>
+		            </a>
+	            </li>
+
+	            <li>
+		            <a href="#">
+		                <figure>
+			                <div class="oot">
+			                	<img id="flag-icon" src="img/solution_icon_optimize-efficnt.png" alt="flag icon">
+			                </div>
+		                <figcaption id="oot-figcaption">Over-the-top <br> (OOT) </figcaption>
+		                </figure>
+		            </a>
+	            </li>
+
+	            <li>
+		            <a href="#">
+		                <figure>
+			                <div class="cloud">
+			                	<img src="img/cloud-icon.png" alt="Cloud icon">
+			                </div>
+			                <figcaption id="cloud-figcaption">Cloud computing</figcaption>
+		                </figure>
+		            </a>
+	            </li>
+
+	            <li>
+		            <a href="#">
+		                <figure>
+			                <div class="services">
+			                	<img src="img/managed-services.png" alt="Services icon">
+			                </div>
+		                <figcaption>Managed services</figcaption>
+		                </figure>
+		            </a>
+	            </li>
+
+	            <li>
+		            <a href="#">
+		                <figure>
+			                <div class="social">
+			                	<img src="img/social-icon.png" alt="Social media icon">
+			                </div>
+		                <figcaption>Social media</figcaption>
+		                </figure>
+		            </a>
+	            </li>
+
+            </ul>
+
+            <a href="#" class="solutions-button">
+				See all of our solutions
+				<img id="solutions-button-arrow" src="img/btnArrow.png" alt="Arrow">
+			</a>
+
 		</section>
 
 	</div>
