--- a/index.html
+++ b/index.html
@@ -200,7 +200,13 @@
 			</a>
 
 		</section>
+	</div>
 
+	<div class="section-events">
+		<section class="section-container">
+			<h1 id="events-title" >WHAT'S HAPPENING AT COMVERSE?</h1>
+
+		</section>
 	</div>
 </body>
 </html>
