--- a/index.html
+++ b/index.html
@@ -132,7 +132,7 @@
 			                <div class="data-monetization">
 			                	<img src="img/data-monetization.png" alt="Data Monetization">
 			                </div>
-		                	<figcaption>Data monetization</figcaption>
+		                	<figcaption id="data-monetization-figcaption">Data monetization</figcaption>
 		                </figure>
 		            </a>
 	            </li>
@@ -143,7 +143,7 @@
 			                <div class="machine-to-machine">
 			                	<img src="img/robot-icon.png" alt="Robot icon">
 			                </div>
-			                <figcaption>Machine to machine (MTM)</figcaption>
+			                <figcaption id="machine-to-machine-figcaption">Machine to machine (MTM)</figcaption>
 		                </figure>
 		            </a>
 	            </li>
@@ -176,7 +176,7 @@
 			                <div class="services">
 			                	<img src="img/managed-services.png" alt="Services icon">
 			                </div>
-		                <figcaption>Managed services</figcaption>
+		                <figcaption id="services-figcaption">Managed services</figcaption>
 		                </figure>
 		            </a>
 	            </li>
@@ -187,7 +187,7 @@
 			                <div class="social">
 			                	<img src="img/social-icon.png" alt="Social media icon">
 			                </div>
-		                <figcaption>Social media</figcaption>
+		                <figcaption id="social-figcaption">Social media</figcaption>
 		                </figure>
 		            </a>
 	            </li>
@@ -206,7 +206,55 @@
 		<section class="section-container">
 			<h1 id="events-title" >WHAT'S HAPPENING AT COMVERSE?</h1>
 
+			<ul class="events-list">
+				<li>
+                    <a href="#">
+                        <section itemscope itemtype="http://schema.org/Event">
+                            <h2 class="event-header">News</h2>
+                            <article>
+                                <h1 class="event-date"><meta itemprop="doorTime" content="2015-09-04"><span class="day-container">04</span> <span class="month-container">SEP</span></h1>
+                                <p itemprop="description">Comverse Regains Lead in Convergent Charging Markets Regains Lead in</p>
+                            </article>
+                        </section>
+                    </a>
+                    <a class="all-link all-news-link" href="#">
+                    	<img src="img/eventListIconNews.png" alt="news icon"><span class="all-news-events">All news</span>
+                    </a>
+                </li>
+
+                <li>
+                    <a href="#">
+                        <section itemscope itemtype="http://schema.org/Event">
+                            <h2 class="event-header">Events</h2>
+                            <article>
+                                <h1 class="event-date"><meta itemprop="doorTime" content="2015-09-04"><span class="day-container">04</span> <span class="month-container">SEP</span></h1>
+                                <p itemprop="description">Comverse Regains Lead in Convergent Charging Markets Regains Lead in</p>
+                            </article>
+                        </section>
+                    </a>
+                    <a href="#" class="all-link all-events-link">
+                    	<img src="img/eventListIconEvents.png" alt="news icon"><span class="all-news-events">All Events</span>
+                    </a>
+                 </li>
+
+                 <li>
+                    <a href="#">
+                        <section itemscope itemtype="http://schema.org/Event">
+                            <!-- <h2 class="event-header">Press releases</h2> -->
+                            <article>
+                                <h1 class="event-date"><meta itemprop="doorTime" content="2015-09-04"><span class="day-container">04</span> <span class="month-container">SEP</span></h1>
+                                <p itemprop="description">Comverse Regains Lead in Convergent Charging Markets Regains Lead in</p>
+                            </article>
+                        </section>
+                    </a>
+                    <a href="#" class="all-link all-press-link">
+                    	<img src="img/eventListIconEvents.png" alt="news icon"><span class="all-news-events">All Events</span>
+                    </a>
+                </li>
+			</ul>
+			
 		</section>
 	</div>
+
 </body>
 </html>
