--- a/index.html
+++ b/index.html
@@ -66,17 +66,17 @@
 					<a href="#">
 						<li class="selected"></li>
 					</a>
-					<a href="#">
-						<li></li>
+					<a  href="#">
+						<li class="not-selected"></li>
 					</a>
 					<a href="#">
-						<li></li>
+						<li class="not-selected"></li>
 					</a>
 					<a href="#">
-						<li></li>
+						<li class="not-selected"></li>
 					</a>
 					<a href="#">
-						<li></li>
+						<li class="not-selected"></li>
 					</a>
 			</ol>
 			</div>
@@ -253,6 +253,102 @@
                 </li>
 			</ul>
 			
+		</section>
+	</div>
+
+	<div class="section-success-stories">
+		<section class="section-clients">
+			<section class="section-container">
+				<h1>SUCCESS STORIES</h1>
+				<ul class="clients-list">
+					<li>
+						<blockquote id="blockquote1">
+							<img src="img/CB-JP-face.png" alt="Buissness Man">
+							<!-- <div class="success-story1"> -->
+								<img id="quote-grey"src="img/quote-grey.png" alt="Quote icon">
+								<p>We have very good and very warm relations with Comverse. We always achieved.."</p>
+							<!-- </div> -->
+							<div class="personal-details personal-details1">
+								<p>
+									<a href="#">SERGEY KOROTYCH</a>
+								</p>
+								<p>Deputy CTO, 3 Mob Ukraine</p>
+								<div class="person-logo1">
+									<img src="img/3mob_w108px_X_h95px.jpg" alt="Person logo">
+								</div>
+							</div>
+						</blockquote>
+						<div class="logos">
+								<div class="company-logo1">
+									<img id="company-logo-1-1" src="img/cycle30.png" alt="Cycle30 logo">
+								</div>
+								<div class="company-logo1">
+									<img id="company-logo-1-2" src="img/bull.png" alt="Bull logo">
+								</div>
+								<div class="company-logo1">
+									<img id="company-logo-1-3" src="img/gemplus.png" alt="Gemplus logo">
+								</div>
+						</div>
+					</li>
+					<li>
+							<div class="logos logos-top">
+								<div class="company-logo">
+									<img src="img/mts_w108px_X_h95px.jpg" alt="MTC logo">
+								</div>
+								<div class="company-logo">
+									<img src="img/upc_w108px_X_h95px.jpg" alt="Cable-Wireless logo">
+								</div>
+								<div class="company-logo">
+									<img src="img/Kyivstarw_w108px_X_h95.jpg" alt="Kyivstarw logo">
+								</div>
+							</div>
+
+							<blockquote id="blockquote2">
+								<img src="img/JT-GM-face.png" alt="Buissness Man">
+								<p>Comverse has demonstrated that they are partners, not just suppliers, because they understand our needs,
+									out situations; together we are.."</p>
+								<div class="personal-details personal-details1">
+									<p>
+										<a href="#">ADALE KEHASSAN</a>
+									</p>
+									<p>CIO of Multi-links</p>
+									<div class="person-logo1">
+										<img id="multilinks" src="img/multilinks.png" alt="Multi-links logo">
+									</div>
+								</div>
+							</blockquote>
+					</li>
+					<li>
+						<blockquote id="blockquote3">
+							<div>
+								<img id="quote-grey"src="img/quote-grey.png" alt="Quote icon">
+								<p>Comverse has been able to fully deliver what we want and we have peers..."</p>
+							</div>
+							<div class="personal-details personal-details1">
+									<p>
+										<a href="#">RAVISHANKER</a>
+									</p>
+									<p>Tata Sky CIO N.</p>
+									 <img id="tata-sky" src="img/Tata_Sky_w108px_X_h95px.jpg" alt="Tata Sky logo">
+							</div>
+						</blockquote>
+
+						<div class="logos3">
+							
+								<img src="img/hp.png" alt="HP logo">
+								<img src="img/atos.png" alt="Atos logo">
+							
+						</div>
+					</li>
+				</ul>
+
+				<div id="all-success-stories-btn-div">
+					<a href="#" class="all-success-stories-button">
+					All 256 seccess stories
+					<img id="all-succes-stories-button-arrow" src="img/btnArrow.png" alt="Arrow">
+					</a>
+				</div>
+			</section>	
 		</section>
 	</div>
 
