final no responsive3

--- a/index.html
+++ b/index.html
@@ -344,7 +344,7 @@
 
 				<div id="all-success-stories-btn-div">
 					<a href="#" class="all-success-stories-button">
-					All 256 seccess stories
+					All 256 success stories
 					<img id="all-success-stories-button-arrow" src="img/btnArrow.png" alt="Arrow">
 					</a>
 				</div>
