--- a/index.html
+++ b/index.html
@@ -67,12 +67,13 @@
 			 <label class="mobile-search-icon" for="mobile-search"><a href="http://www.google.com/search"><img src="img/searchBtnMobile.png" alt="search"></a></label>
 
 			<div class="nav-side">
+			<label for="">
 				<select class="lang-select">
 					<option>EN</option>
 					<option>AR</option>
 					<option>HE</option>
 				</select>
-
+			</label>
 				<a id="costumer-login" href="#">Costumer login</a>
 			</div>
 
