--- a/index.html
+++ b/index.html
@@ -78,9 +78,9 @@
 			</div>
 
 			<form class="search-field" method="GET" action="http://www.google.com/search" title="search-box">
-				<label for="searchtxt" class="hidden">
+				<!-- <label for="searchtxt" class="hidden"> -->
 	    			<input type="text" name="q" />
-	    		</label>
+	    		<!-- </label> -->
 	    		
 	    		<button type="submit">
 	    			<img id="btn-divider" src="img/divider.png" alt="divider"/>
