--- a/index.html
+++ b/index.html
@@ -107,19 +107,19 @@
 
       			<ol class="carousel-nav"> 
 					<a href="#">
-						<li class="selected"></li>
+						<li class="selected"> <span class="hidden">1</span> </li>
 					</a>
 					<a  href="#">
-						<li class="not-selected"></li>
+						<li class="not-selected"><span class="hidden">2</span></li>
 					</a>
 					<a href="#">
-						<li class="not-selected"></li>
+						<li class="not-selected"><span class="hidden">3</span></li>
 					</a>
 					<a href="#">
-						<li class="not-selected"></li>
+						<li class="not-selected"><span class="hidden">4</span></li>
 					</a>
 					<a href="#">
-						<li class="not-selected"></li>
+						<li class="not-selected"><span class="hidden">5</span></li>
 					</a>
 				</ol>
 			</div>
@@ -137,7 +137,7 @@
 			                </section>
 			            </li>
 			            <li class="rounded-cube cube-green">
-			            <a href="#">
+			            <a href="#"> <span class="hidden">1</span>
 			                <section>
 			                    <h2 class="cube-text">Managed Services World Congress September 18-19 Berlin, Germany.</h2>
 			                    <a href="#">
@@ -148,7 +148,7 @@
 			            </a>
 			            </li>
 			            <li class="rounded-cube cube-orange">
-			            <a href="#">
+			            <a href="#"> <span class="hidden">1</span>
 			                <section>
 			                    <h2 class="cube-text">Comverse: Enabling a world of Connected Possibilities.</h2>
 			                    <a href="#">
@@ -504,9 +504,9 @@
                 </form>
             
                 <div class="social-network-logos">
-                    <a class="social-network-logo youtube-logo" href="#"></a>
-                    <a class="social-network-logo twitter-logo" href="#"></a>
-                    <a class="social-network-logo linkedin-logo" href="#"></a>
+                    <a class="social-network-logo youtube-logo" href="#"><span class="hidden">1</span></a>
+                    <a class="social-network-logo twitter-logo" href="#"><span class="hidden">2</span></a>
+                    <a class="social-network-logo linkedin-logo" href="#"><span class="hidden">3</span></a>
                 </div>
             </div>
 
