--- a/index.html
+++ b/index.html
@@ -370,14 +370,15 @@
 					<li>CONTACT US</li>
 				</a>
 				<a href="#">
+					<span class="hidden">1</span>
 					<li>SUBSCRIBE TO COMVERSE NEWS</li>
 				</a>
 				<a href ="#">
 				<li>
 				VISIT US ON :
-                    <a class="youtube-logo" href="#"></a>
-                    <a class="twitter-logo" href="#"></a>
-                    <a class="linkedin-logo" href="#"></a>
+                    <a class="youtube-logo" href="#"><span class="hidden">1</span></a>
+                    <a class="twitter-logo" href="#"><span class="hidden">2</span></a>
+                    <a class="linkedin-logo" href="#"><span class="hidden">3</span></a>
                 
 				</li>
 
