--- a/index.html
+++ b/index.html
@@ -373,7 +373,7 @@
 					<span class="hidden">1</span>
 					<li>SUBSCRIBE TO COMVERSE NEWS</li>
 				</a>
-				<a href ="#">
+				<a href ="#"> <span class="hidden">1</span>
 				<li>
 				VISIT US ON :
                     <a class="youtube-logo" href="#"><span class="hidden">1</span></a>
@@ -391,7 +391,7 @@
 						</select>
 					</li>      
                         
-                </ul>
+            </ul>
                 <p class="mobCopyright">Copyright © 2015 Comverse, Inc. &nbsp; | &nbsp; <a href="#">Privacy Policy</a>
 
 				&nbsp; | &nbsp; <a href="#">SiteMap</a>
