--- a/index.html
+++ b/index.html
@@ -19,6 +19,7 @@
                             <span class="icon-bar"></span>
                             <span class="icon-bar"></span>
                             <span class="icon-bar"></span>
+                            <span class="hidden">1</span>
                         </label>
                         <input type="checkbox" id="nav-mobile-btn">
 
