--- a/index.html
+++ b/index.html
@@ -79,9 +79,9 @@
 			</div>
 
 			<form class="search-field" method="GET" action="http://www.google.com/search" title="search-box">
-				<!-- <label for="searchtxt" class="hidden"> -->
+				<label for="searchtxt" class="hidden"></label>
 	    			<input type="text" name="q" />
-	    		<!-- </label> -->
+	    		
 	    		
 	    		<button type="submit">
 	    			<img id="btn-divider" src="img/divider.png" alt="divider"/>
@@ -386,7 +386,7 @@
 
 				</a>
 					<li>Change language:
-						<select class="footerlanguage" name="">
+						<select class="footerlanguage" name="" title="Languages">
 							<option value="English">English</option>
 							<option value="Hebrew">Hebrew</option>
 							<option value="Arabic">Arabic</option>
