--- a/index.html
+++ b/index.html
@@ -79,9 +79,9 @@
 			</div>
 
 			<form class="search-field" method="GET" action="http://www.google.com/search" title="search-box">
-				<label for="searchtxt" class="hidden"></label>
+				<label for="searchtxt" class="hidden">
 	    			<input type="text" name="q" />
-	    		
+	    		</label>
 	    		
 	    		<button type="submit">
 	    			<img id="btn-divider" src="img/divider.png" alt="divider"/>
