--- a/index.html
+++ b/index.html
@@ -79,7 +79,7 @@
 			</div>
 
 			<form class="search-field" method="GET" action="http://www.google.com/search" title="search-box">
-				<label for="searchtxt" class="hidden">s
+				<label for="searchtxt" > <span class="hidden">s</span>
 	    			<input type="text" name="q" />
 	    		</label>
 	    		
