--- a/index.html
+++ b/index.html
@@ -502,8 +502,9 @@
             
                 <form class="subscribe-form">
                     <h4 id="footer-right-subscribe">Subscribe to Comverse</h4>
-                    <input type="email" id="email" placeholder="EMAIL">
-                    <input type="submit" id="subscribe-email-submit" value="SIGN UP" text="SIGN UP">
+                    <label for="email"><span class="hidden">e</span></label>
+                    	<input type="email" id="email" name="email" placeholder="EMAIL">
+                    	<input type="submit" id="subscribe-email-submit" value="SIGN UP" text="SIGN UP">
                 </form>
             
                 <div class="social-network-logos">
