--- a/index.html
+++ b/index.html
@@ -79,9 +79,9 @@
 			</div>
 
 			<form class="search-field" method="GET" action="http://www.google.com/search" title="search-box">
-				<label for="searchtxt" > <span class="hidden">s</span>
+				<label for="q" > </label>
 	    			<input type="text" name="q" />
-	    		</label>
+	    		
 	    		
 	    		<button type="submit">
 	    			<img id="btn-divider" src="img/divider.png" alt="divider"/>
@@ -348,8 +348,10 @@
                 </li>
         </ul>
 
-	<div class="more-stories">
-            <a href="#" class="more-btn">All 256 Sucess Stories</a>
+		<div class="more-stories">
+            <a href="#" class="more-btn">All 256 Sucess Stories
+            	<img id="stories-button-arrow" src="img/btnArrow.png" alt="Arrow">
+            </a>
         </div>
 
         <div class="scroll-to-top">
