--- a/index.html
+++ b/index.html
@@ -79,7 +79,7 @@
 			</div>
 
 			<form class="search-field" method="GET" action="http://www.google.com/search" title="search-box">
-				<label for="q" > </label>
+				<label for="q"><span class="hidden">s</span></label>
 	    			<input type="text" name="q" />
 	    		
 	    		
