--- a/index.html
+++ b/index.html
@@ -77,8 +77,9 @@
 			
 				<a id="costumer-login" href="#">Costumer login</a>
 			</div>
-
-			<form class="search-field" method="GET" action="http://www.google.com/search" title="search-box">
+			
+			<label for="searchForm"><span class="hidden">f</span></label>
+			<form class="search-field" name="searchForm" method="GET" action="http://www.google.com/search" title="search-box">
 				<label for="q"><span class="hidden">s</span></label>
 	    			<input type="text" name="q" />
 	    		
