--- a/index.html
+++ b/index.html
@@ -78,10 +78,10 @@
 				<a id="costumer-login" href="#">Costumer login</a>
 			</div>
 			
-			<label for="searchForm"><span class="hidden">f</span></label>
+			
 			<form class="search-field" name="searchForm" method="GET" action="http://www.google.com/search" title="search-box">
-				<label for="q"><span class="hidden">s</span></label>
-	    			<input type="text" name="q" />
+				<label for="searchTxt"><span class="hidden">s</span></label>
+	    			<input type="text" name="q" id="searchTxt" />
 	    		
 	    		
 	    		<button type="submit">
