--- a/index.html
+++ b/index.html
@@ -4,6 +4,7 @@
 	<meta charset="UTF-8">
 	<meta http-equiv="x-ua-compatible" content="ie=edge">
 	<title>Comverse</title>
+	<meta name="viewport" content="width=device-width, initial-scale=1">
 	<link rel="stylesheet" type="text/css" href="css/main.css">
 	<link href='http://fonts.googleapis.com/css?family=Open+Sans:300,400,700' rel='stylesheet' type='text/css'>
 </head>
@@ -357,7 +358,7 @@
 
         <div class="scroll-to-top">
 					<a class=" scroll-to-top-btn" href="#">
-						<img class="scroll-img" src="img/back_top.png" alt="arrow">
+						<img class="scroll-img" src="img/back_top.png" alt="scroll">
 					</a>
 		</div>
         
