--- a/index.html
+++ b/index.html
@@ -66,7 +66,7 @@
 					</li>
 				</ul>
 			</nav>
-			 <label class="mobile-search-icon" for="mobile-search"> <span class="hidden">m</span></label>
+			 <!-- <label class="mobile-search-icon" for="mobile-search"> <span class="hidden">m</span></label> -->
 			 	<a href="http://www.google.com/search">
 			 		<img src="img/searchBtnMobile.png" alt="search">
 			 	</a>
@@ -147,7 +147,7 @@
 			                <section>
 			                    <h2 class="cube-text">Managed Services World Congress September 18-19 Berlin, Germany.</h2>
 			                    <a href="#">
-			                    <img id="text-icon" src="img/text-image.png" alt="Read more icon">
+			                    <img id="text-icon" src="img/text-image.png" alt="Read text icon">
 			                    Read more
 			                    </a>
 			                </section>
