--- a/index.html
+++ b/index.html
@@ -66,10 +66,11 @@
 					</li>
 				</ul>
 			</nav>
-			 <!-- <label class="mobile-search-icon" for="mobile-search"> <span class="hidden">m</span></label> -->
-			 	<a href="http://www.google.com/search">
+			 <label class="mobile-search-icon" for="mobile-search"> <span class="hidden">m</span>
+			 	<a href="http://www.google.com/search" id="mobile-search">
 			 		<img src="img/searchBtnMobile.png" alt="search">
 			 	</a>
+			 </label>
 
 			<div class="nav-side">
 				<label for="languages"><span class="hidden">l</span></label>
