--- a/index.html
+++ b/index.html
@@ -66,7 +66,7 @@
 					</li>
 				</ul>
 			</nav>
-			 <label class="mobile-search-icon" for="mobile-search"> <span class="hidden">m</span>
+			 <label class="mobile-search-icon"> <span class="hidden">m</span>
 			 	<a href="http://www.google.com/search" id="mobile-search">
 			 		<img src="img/searchBtnMobile.png" alt="search">
 			 	</a>
