--- a/index.html
+++ b/index.html
@@ -66,11 +66,11 @@
 					</li>
 				</ul>
 			</nav>
-			 <label class="mobile-search-icon"> <span class="hidden">m</span>
+			 <div class="mobile-search-icon"> <span class="hidden">m</span>
 			 	<a href="http://www.google.com/search" id="mobile-search">
 			 		<img src="img/searchBtnMobile.png" alt="search">
 			 	</a>
-			 </label>
+			 </div>
 
 			<div class="nav-side">
 				<label for="languages"><span class="hidden">l</span></label>
