--- a/index.html
+++ b/index.html
@@ -179,7 +179,7 @@
 	            <li>
 		            <a  href="#" >
 		                <figure class="data-monetization-figure" >
-		                	<figcaption class="data-monetization-figcaption">Business Stimulating Analytics</figcaption>
+		                	<figcaption class="data-monetization-figcaption">Data Monetization</figcaption>
 		                </figure>
 		            </a>
 	            </li>
